# mcache

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cache.go  cache_ext.go  cache_test.go  config.go  config.yaml  docker-compose.yml  entry.go  errors.go  go.mod  go.sum  lfu.go  lru.go  observer.go  options.go  policy.go  rehasher_compat.go  shard.go
.github/workflows/: python-publish.yml
cli/: cache.go  client.go  cluster_cmd.go  daemon_unix.go  daemon_windows.go  hash.go  key.go  kill_unix.go  kill_windows.go  list.go  logger.go  monitor.go  ping.go  repl.go  root.go  server.go  set.go  stats.go  stop.go  version.go
cluster/: cluster.go  cluster_ext.go  health.go  master_slave_mode.go  mode.go  node.go  options.go  sentinel_mode.go  shard_mode.go
cmd/mcache/: main.go
docs/: architecture.md  cli.md  cluster.md  configuration.md  core-cache.md  docker.md  extending.md  getting-started.md  make-guide.md  mbr.md  network-protocol.md  observability.md  raft.md  releasing.md  sdk.md  server.md  set.md
ds/hash/: hash.go  hash_test.go
ds/list/: list.go  list_test.go
ds/set/: ops.go  set.go  set_test.go
infra/: alerter.go  analytics.go  heartbeat.go  logger.go  observer.go  options.go  prometheus.go
mbr/: collector.go  config.go  loop.go  matrix.go  mbr_test.go  migrator.go  pid.go  scorecard.go  types.go
monitor/: collector.go  monitor.go  monitor_test.go  noop.go  options.go  proc_linux.go  proc_other.go  runtime.go  snapshot.go
net/: client.go  client_ext.go  errors.go  pipeline.go  pipeline_test.go  protocol.go  protocol_ext.go  raft_cmd.go  raft_transport.go  server.go  server_ext.go
raft/: config.go  log.go  node.go  raft.go  raft_test.go  rpc.go  transport.go  transport_memory.go
rehash/: batch.go  errors.go  incremental.go  rehasher.go
scripts/: pack.py
sdk/c/: CMakeLists.txt  Makefile  README.md
sdk/c/examples/: basic.c
sdk/c/include/mcache/: mcache.h
sdk/c/src/: client.c  client.h  errors.c  errors.h  platform.h  protocol.c  protocol.h
sdk/c/tests/: test_client.c  test_protocol.c
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: basic.cpp  cluster.cpp
sdk/cpp/include/mcache/: client.hpp  cluster.hpp  codec.hpp  connection.hpp  connection_pool.hpp  errors.hpp  frame.hpp  mcache.hpp  options.hpp  protocol.hpp
sdk/cpp/src/: connection.cpp  frame.cpp  platform.hpp  protocol.cpp
sdk/cpp/tests/: test_client.cpp  test_cluster.cpp  test_protocol.cpp
sdk/go/: CHANGELOG.md  README.md  RELEASING.md  client.go  client_ext.go  cluster.go  cluster_ext.go  codec.go  doc.go  errors.go  go.mod  go.sum  options.go  pipeline.go
sdk/python/: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
sdk/python/mcache/: __init__.py  client.py  cluster.py  connection.py  errors.py  pool.py  protocol.py
sdk/python/scripts/: publish.ps1  publish.sh
tests/go/: go.mod  go.sum  hash_protocol_test.go  integration_test.go  list_protocol_test.go  set_test.go
tests/go/bench_compare/: main.go
tests/go/bench_mbr/: main.go
tests/go/bench_mcache/: main.go
tests/go/bench_redis/: main.go
tests/go/diagnose/: main.go
tests/python/: README.md  concurrent_bench.py  diagnose.py  harness.py  kv_bench.py  kv_bench_mcache.py  ping.py  pypi_smoke_test.py  report.py  requirements.txt  run_all.py
