[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcache"
version = "1.0.0"
description = "Python SDK for mcache — high-performance in-memory cache"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "mcache contributors"}]
keywords = ["cache", "mcache", "redis-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "redis"]

[tool.setuptools.packages.find]
where = ["."]
